<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/devices_fragment">

    <fragment
        android:id="@+id/devices_fragment"
        android:name="com.moduloTech.smarthome.ui.ListDevices.view.ListDevicesFragment"
        android:label="@string/app_devices"
        tools:layout="@layout/fragment_list_devices">
        <action
            android:id="@+id/action_to_roller_device"
            app:destination="@id/device_details_roller"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_to_heater_device"
            app:destination="@id/device_details_heater"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_to_light_device"
            app:destination="@id/device_details_light"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_to_profile_fragment"
            app:destination="@id/user_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/device_details_roller"
        android:name="com.moduloTech.smarthome.ui.DetailsDevice.roller.DetailsDeviceRollerFragment"
        android:label="@string/app_roller"
        tools:layout="@layout/details_device_roller_fragment">

        <argument
            android:name="arg_from_device_list_fragment"
            app:argType="com.moduloTech.smarthome.data.model.Device" />
    </fragment>
    <fragment
        android:id="@+id/device_details_heater"
        android:name="com.moduloTech.smarthome.ui.DetailsDevice.heater.DetailsDeviceHeaterFragment"
        android:label="@string/app_heater"
        tools:layout="@layout/details_device_light_fragment">

        <argument
            android:name="arg_from_device_list_fragment"
            app:argType="com.moduloTech.smarthome.data.model.Device" />
    </fragment>

    <fragment
        android:id="@+id/device_details_light"
        android:name="com.moduloTech.smarthome.ui.DetailsDevice.light.DetailsDeviceLightFragment"
        android:label="@string/app_Light"
        tools:layout="@layout/details_device_light_fragment">
        <argument
            android:name="arg_from_device_list_fragment"
            app:argType="com.moduloTech.smarthome.data.model.Device" />
    </fragment>

    <fragment
        android:id="@+id/user_fragment"
        android:name="com.moduloTech.smarthome.ui.user.UserFragment"
        android:label="@string/app_user_profile"
        tools:layout="@layout/user_fragment" />
</navigation>